Fix: global search text illegible in light mode (#6602)

--- a/src-ui/src/app/components/app-frame/global-search/global-search.component.scss
+++ b/src-ui/src/app/components/app-frame/global-search/global-search.component.scss
@@ -41,6 +41,7 @@ form {
     transition: all .3s ease, padding-left 0s ease, background-color 0s ease; // Safari requires all
     > input {
       outline: none;
+      color: var(--pngx-primary-text-contrast);
 
       &::placeholder {
         color: rgba(255, 255, 255, 0.4);
